Fix gap

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,6 +12,11 @@
   }
 }
 
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
